--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,10 @@
 asgiref==3.8.1
+diff-match-patch==20241021
 Django==5.1.4
 django-cors-headers==4.6.0
+django-import-export==4.3.3
 djangorestframework==3.15.2
 gunicorn==23.0.0
 packaging==24.2
 sqlparse==0.5.3
+tablib==3.7.0
