--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,5 +6,6 @@ django-import-export==4.3.3
 djangorestframework==3.15.2
 gunicorn==23.0.0
 packaging==24.2
+python-dotenv==1.0.1
 sqlparse==0.5.3
 tablib==3.7.0
